--- a/mdx_contents/blog/blockchain/NFT/blend.mdx
+++ b/mdx_contents/blog/blockchain/NFT/blend.mdx
@@ -12,7 +12,7 @@ type: BlogPost
 
 Blend, also known as Blur Lending, is a Peer-to-Peer Perpetual Lending Protocol designed specifically for Non-Fungible Tokens (NFTs).
 Since its inception on May 1st, 2023, Blend has rapidly established itself as a prominent player in the emerging "NFT-Fi" space.
-At of now (June 20th, 2023), it commands a significant share of over 90% in the NFT lending market.
+As the current time of writing (June 20th, 2023), Blend commands a significant share of over 90% in the NFT lending market.
 
 # How does Blend works?
 
