change light color theme

--- a/mdx_contents/blog/blockchain/DeFi/uniswapV4/01.mdx
+++ b/mdx_contents/blog/blockchain/DeFi/uniswapV4/01.mdx
@@ -2,7 +2,7 @@
 title: UniswapV4 - An brief introduction
 date: '2023-06-14T00:00:00Z'
 modifiedTime: '2023-06-16T00:00:00Z'
-summary: An overview of Uniswap V4 - Singleton design, swap/donate hooks, flash accounting
+summary: A overview of Uniswap V4 - Singleton design, swap/donate hooks, flash accounting
 image: 'blogs/blockchain/uniswapV3/cover.webp'
 categories: blockchain, DeFi
 type: BlogPost
